crates/top/re_sdk/tests/integration/lenses/snapshots/integration__lenses__operations__scatter_columns.snap
---
source: crates/top/re_sdk/tests/integration/lenses/operations.rs
expression: "format!(\"{chunk:-240}\")"
---
┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                     │
│ * entity_path: /scatter_test/exploded                                                                                         │
│ * id: [**REDACTED**]                                                                                                          │
│ * version: [**REDACTED**]                                                                                                     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬──────────────────────────┬──────────────────┬─────────────────────────────┐ │
│ │ RowId                                         ┆ my_timestamp             ┆ tick             ┆ exploded_strings            │ │
│ │ ---                                           ┆ ---                      ┆ ---              ┆ ---                         │ │
│ │ type: non-null FixedSizeBinary(16)            ┆ type: Int64              ┆ type: Int64      ┆ type: List(Utf8)            │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: my_timestamp ┆ index_name: tick ┆ component: exploded_strings │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true          ┆ is_sorted: true  ┆ kind: data                  │ │
│ │ is_sorted: true                               ┆ kind: index              ┆ kind: index      ┆                             │ │
│ │ kind: control                                 ┆                          ┆                  ┆                             │ │
│ ╞═══════════════════════════════════════════════╪══════════════════════════╪══════════════════╪═════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ 1                        ┆ 1                ┆ [one]                       │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 2                        ┆ 1                ┆ [two]                       │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 3                        ┆ 1                ┆ [three]                     │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 4                        ┆ 2                ┆ [four]                      │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 5                        ┆ 3                ┆ null                        │ │
│ └───────────────────────────────────────────────┴──────────────────────────┴──────────────────┴─────────────────────────────┘ │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
